<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profilefragemnt"
            type="hu.bme.wannameet2.secondstep.fragment.ProfileFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="secondstop.fragment.ProfileFragment"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:text="@={profilefragemnt.editTextName}"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:gravity="center">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:text="@={profilefragemnt.editTextNickname}"/>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:text="@string/save"
            android:onClick="@{() -> profilefragemnt.saveButtonOnClick()}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/sign_out"
                android:onClick="@{() -> profilefragemnt.signOutButtonOnClick()}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>